Fixed size of image in ad list and spacing between main and footer.

--- a/src/index.css
+++ b/src/index.css
@@ -26,4 +26,5 @@ code {
 
 main {
   flex: 1;
+  padding-bottom: 2rem;
 }
