--- a/src/styling/adListing.css
+++ b/src/styling/adListing.css
@@ -53,7 +53,10 @@ i {
     font-size: 1rem;
 }
 
-.ad-image { 
+.ad-image {
+    background-color: #faf9f8;
+    object-fit: contain; 
+    height: 200px;
     width: 100%;
 }
 
